2013-06-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Make SVN revision in version string available again
	for out-of-source build.

2013-06-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta2.

2013-06-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0+beta1 release.

	* CHANGES: Updated.

2013-06-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Adjust version identification string for protocol version switch.

	* src/openvassd.c (scanner_thread): Adjust version identifiers. Handle
	2.0 like 1.0 and 2.1 like 1.1.

	* src/comm.c (comm_init): Replace 1.x with 2.xbeta1.

2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (check_client): New. Former check_user from users.c.

	* src/users.c, src/users.h: Removed.

	* src/CMakeLists.txt: Removed handling of users.c.

	* COPYING: Removed module users.

2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/ntp_11.c (ntp_11_rules): Renamed variable user_rules to
	client_rules which is more suitable.

2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Move users_add_rule() from users.c to rules.c as rules_add_client_rule()
	which is far more suitable.

	* src/users.c (users_add_rule): Removed.

	* src/users.h: Remove proto accordingly.

	* src/rules.c (rules_add_client_rule): New.

	* src/rules.h: Add proto accordingly.

	* src/ntp_11.c (ntp_11_rules): Rename function call accordingly.

2013-06-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/auth.c, src/auth.h: Removed. This layer is not required
	anymore.

	* src/attack.c, src/comm.c, src/ntp_11.c, src/openvassd.c,
	src/sighand.c src/utils.c: Remove include of auth.h.

	* src/CMakeLists.txt: Remove handling of module auth.c.

	* COPYING: Remove module auth.

2013-06-11  Matthew Mundell <matthew.mundell@greenbone.net>
